# zimatise-legacy

./: .gitignore  README.md  config.ini  log-zimatise.txt  pyproject.toml  user.session  zimatise_one.py
projects/output_Kotlin_Fundamentos_da_Programacao_para_Leigos_Marco_Aurelio_Dias_de_Oliveira/: channel_metadata  header_project.txt  summary.txt  upload_plan.csv  video_details_1_origin.csv  video_details_2_reencode.csv  video_details_5_splited.csv
projects/output_Kotlin_Fundamentos_da_Programacao_para_Leigos_Marco_Aurelio_Dias_de_Oliveira/metadata/: vidmd_10. Aula 05 - 2º Programa Kotlin  Criar no seu Projeto um Método para impressão._fdc06.json  vidmd_11. Aula 06 - Fundamentos  Fluxo de Entrada, Processamento e Saída com Exemplo._fdc06.json  vidmd_14. Dica do Professor - Kotlin REPL_fdc06.json  vidmd_16. Convite especial do Professor - Participe da Comunidade dos Alunos do Curso._fdc06.json  vidmd_17. Aula 07 - Tipos de variáveis possíveis em Kotlin  val var const val_fdc06.json  vidmd_18. Aula 08 - 4º Programa Kotlin  Cálculo do raio do círculo  val var const val_fdc06.json  vidmd_19. Dica do Professor - Como implementar a entrada de dados via teclado em Kotlin_fdc06.json  vidmd_2. Seja protagonista da sua carreira na área de tecnologia._fdc06.json  vidmd_20. Dica do Professor - Como utilizar uma Biblioteca Matemática pronta em Kotlin_fdc06.json  vidmd_21. Aula 09 - Visão geral sobre os Tipos de Dados disponíveis em Kotlin_fdc06.json  vidmd_22. Aula 10 - Declarando Char e String_fdc06.json  (+50 more)
user/: header_template.txt
