[tool.poetry]
name = "zimatise"
version = "0.1.0"
description = ""
authors = ["MrZero <yanemmanuel00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
natsort = "^8.4.0"
numpy = "^2.2.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pyautogui = "^0.9.54"
pyperclip = "^1.9.0"
pyrofork = "^2.3.53"
tgcrypto = "^1.2.5"
unidecode = "^1.3.8"
zipind = "^1.1.3"
pyrogram = "^2.0.106"
tgsender = {git = "https://github.com/GeekPortuga/tgsender.git"}
vidtool = {git = "https://github.com/GeekPortuga/vidtool.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
